# lambda_hat

./: .envrc  .gitignore  .repomixignore  CLAUDE.md  Makefile  QA_TEST_FAILURE_REPORT.md  README.html  README.md  Snakefile  TEST_FAILURES.md  VI_CRITICAL_ISSUE.md  VI_FIX_SUMMARY.md  VI_TEST_INVESTIGATION_FOLLOWUP.md  generate_assets.py  llc_sweep_results.csv  main.py  modal_app.py  parsl_config_local.py  parsl_config_slurm.py  pyproject.toml  repomix.config.json  runners_common.py  study_default.yaml  study_dln.yaml  study_example.yaml  study_small.yaml  study_test.yaml  test_quadratic_sanity.py  todo.md  todo_plots.md  todo_seep_dim.md  todo_swap_loss.md  train.py  viewer.py
.github/workflows/: docs.yml
conf/: config.yaml  promote.yaml
conf/sample/: base.yaml
conf/sample/sampler/: hmc.yaml  sgld.yaml
conf/sampler/: fast.yaml
config/: check_tensorboard.yaml  experiments.yaml  experiments_smoke.yaml  optuna_demo.yaml  smoke.yaml
config/optuna/: default.yaml
config/parsl/: local.yaml
config/parsl/slurm/: cpu.yaml  gpu-a100.yaml
docs/: CONTRIBUTING.md  _build.py  _checks.py  _gen_cli.py  _gen_config.py  backends.md  blackjax.md  caching.md  cli.md  compatibility.md  config.md  configuration.md  debugging_parsl_workflows.md  executor_routing.md  experiments.md  flow_prng_issue.md  flow_vmap_issues.md  index.md  llc.md  methodology.md  optuna_workflow.md  output_management.md  parallelism.md  problems.md  samplers.md  sgld-precond.md  sgld.md  studies.md  sweeps.md  targets.md  vi.html  vi.md  vi_flow.md  vi_mfa.md  vi_normalizing_flow.md  workflows.md
flows/: parsl_llc.py
lambda_hat/: __init__.py  __main__.py  analysis.py  artifacts.py  cache.py  cli.py  cli_main.py  cli_promote.py  config.py  config_optuna.py  data.py  entry.py  entry_promote.py  equinox_adapter.py  exec_local.py  exec_slurm.py  hydra_support.py  id_utils.py  logging_config.py  losses.py  main.py  models.py  nn_eqx.py  omegaconf_support.py  parsl_cards.py  posterior.py  run.py  sampling.py  sampling_runner.py  target_artifacts.py  targets.py  training.py  types.py  validation.py  variational.py  workflow_utils.py
lambda_hat/commands/: __init__.py  artifacts_cmd.py  build_cmd.py  debug_cmd.py  diagnose_cmd.py  diagnose_target_cmd.py  promote_cmd.py  sample_cmd.py  sweep_cmd.py
lambda_hat/conf/: __init__.py  config.yaml  promote.yaml  workflow.yaml
lambda_hat/entrypoints/: __init__.py  build_target.py  lh.py  parsl_llc.py  parsl_optuna.py  promote.py  sample.py  workflow.py
lambda_hat/promote/: core.py
lambda_hat/runners/: __init__.py  hmc_reference.py  parsl_apps.py  run_method.py
lambda_hat/samplers/: __init__.py  common.py  hmc.py  mclmc.py  sgld.py  sgnht.py  vi.py
lambda_hat/utils/: __init__.py  rng.py
lambda_hat/vi/: __init__.py  base.py  flow.py  mfa.py  registry.py  types.py
lambda_hat/workflows/: parsl_llc.py  parsl_optuna.py  sample.py  tune.py
llc/: __init__.py  __main__.py  _az.py  analysis.py  artifacts.py  cache.py  cli.py  cli_click.py  config.py  convert.py  data.py  diagnostics.py  exec_local.py  exec_slurm.py  execution.py  experiments.py  experiments_matrix.py  losses.py  manifest.py  modal_app.py  models.py  pipeline.py  posterior.py  presets.py  run.py  runners.py  runners_common.py  sampling.py  sweep.py  targets.py  tasks.py  types.py  validation.py
llc/cli/: __init__.py  env.py  options.py
llc/commands/: analyze_cmd.py  plot_sweep_cmd.py  promote_cmd.py  pull_cmd.py  run_cmd.py  showcase_cmd.py  sweep_cmd.py
llc/samplers/: __init__.py  adapters.py  base.py  hmc.py  mclmc.py  sgld.py  sgnht.py  utils.py
llc/util/: backend_bootstrap.py  backend_dispatch.py  config_overrides.py  logging_setup.py  modal_utils.py  promote_utils.py
llc_old/: artifacts.py  cache.py  data.py  execution.py  modal_app.py  pipeline.py  runners.py
llc_old/cli/: options.py
llc_old/commands/: analyze_cmd.py  plot_sweep_cmd.py  pull_cmd.py  run_cmd.py  sweep_cmd.py
llc_old/samplers/: __init__.py
llc_old/util/: backend_bootstrap.py  json_safe.py  promote_utils.py
plans/: artefacts.md  artifacts.md  backends.md  cli_config.md  cloud.md  entrypoints.md  equinox_fixes.md  equinox_fixes_vi.md  finish_vi.md  flow.md  generic_variational_inference.md  htex.md  logging.md  logging_migration.md  metaflow.md  more_analysis_refactor.md  more_variational_fix.md  multiprocess.md  no_haiku.md  no_json.md  normalizing_flow.md  optuna.md  parsl.md  redoc.md  refactor_for_variational_inference.md  refactor_viz_for_variational_inference.md  slurm.md  smoke.md  sweep.md  thread_safety.md  variational.md  variational_inference.md  vi_progress.md
scripts/: debug_parsl_diag.py  make_readme_assets.py  migrate_to_runs.py  plot_sweep.py  promote_readme_images.py  pull_artifacts.py  test_parsl_imports.py
tests/: conftest.py  test_artifact_integration.py  test_backend_dispatch.py  test_cache_sampler_scoping.py  test_convert_analysis.py  test_data_mixture_prng.py  test_mclmc_api_contract.py  test_mclmc_validation.py  test_mlp_skip.py  test_optuna_config.yaml  test_optuna_workflow.py  test_parsl_workflow.py  test_parsl_workflow_config.yaml  test_precond_update.py  test_sgld_rng.py  test_smoke.py  test_smoke_workflow.py  test_smoke_workflow_config.yaml  test_sweep_logger.py  test_vi_advanced.py  test_vi_flow_smoke.py  test_vi_integration.py  test_vi_mlp.py  test_vi_quadratic.py  test_vi_registry.py  test_vi_tensorboard.py  test_vi_whitening.py
tools/: lh.py
workflows/: apps.py  parsl_llc.py  parsl_optuna.py
(+19 files in other folders)
