[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lambda_hat*"]

[tool.setuptools.package-data]
lambda_hat = ["conf/**/*.yaml"]

[project]
name = "lambda-hat"
version = "0.1.0"
description = "Lambda-Hat: Local Learning Coefficient (LLC) estimation via SGLD/HMC/MCLMC"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arviz~=0.22.0",
    "blackjax==1.2.5",
    "dm-haiku>=0.0.10",
    "flax>=0.12.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "optax>=0.2.5",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "snakemake>=9.11.6",
]

[project.optional-dependencies]

# Local / macOS / CPU (MPS or CPU-only)
cpu = [
  "jax~=0.7.1",               # pulls CPU/MPS wheels from PyPI
]

# CUDA 12.x wheels for Linux (bundled CUDA libs; only needs a recent NVIDIA driver)
cuda12 = [
  "jax[cuda12_local]~=0.7.1"
]

dev = [
    "files-to-prompt>=0.6",
    "marimo>=0.15.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "pytest>=8.4.2",
]

[project.scripts]
lambda-hat-promote = "lambda_hat.entrypoints.promote:main_promote"
lambda-hat-build-target = "lambda_hat.entrypoints.build_target:main"
lambda-hat-sample = "lambda_hat.entrypoints.sample:main"
lambda-hat-workflow = "lambda_hat.entrypoints.workflow:main_workflow"

