[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lambda_hat*"]

[tool.setuptools.package-data]
lambda_hat = ["conf/**/*.yaml"]

[project]
name = "lambda-hat"
version = "0.1.0"
description = "Lambda-Hat: Local Learning Coefficient (LLC) estimation via SGLD/HMC/MCLMC"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arviz~=0.22.0",
    "blackjax==1.2.5",
    "click>=8.1.0",
    "cookiecutter>=2.6.0",
    "equinox>=0.13.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "optax>=0.2.5",
    "optuna>=4.2.0",
    "pandas>=2.0.0",
    "parsl>=2025.11.10",  # Requires spawn-by-default for JAX + matplotlib/arviz compatibility
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "tensorboard>=2.15.0",
    "tensorboardx>=2.6.4",
]

[project.optional-dependencies]

# Local / macOS / CPU (MPS or CPU-only)
# Auto-selects JAX version based on platform:
# - Intel Macs (x86_64): JAX 0.4.38 (no 0.7.x wheels available)
# - Other platforms (ARM Macs, Linux, Windows): JAX 0.7.2
cpu = [
  "jax==0.4.38; platform_machine == 'x86_64' and sys_platform == 'darwin'",
  "jax~=0.7.2; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]

# CUDA 12.x wheels for Linux (bundled CUDA libs; only needs a recent NVIDIA driver)
# Platform marker prevents resolution on non-Linux (avoids conflicts with cpu extra)
cuda12 = [
  "jax[cuda12_local]~=0.7.2; sys_platform == 'linux'",
]

# Normalizing flow VI (requires FlowJAX; Equinox is now in base deps)
flowvi = [
  "flowjax>=0.11.0",
]

[dependency-groups]
dev = [
    "files-to-prompt>=0.6",
    "marimo>=0.15.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[project.scripts]
lambda-hat = "lambda_hat.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "T201"]  # T201: ban print() in library code
ignore = []

# Allow print() in tests, notebooks, and docs scripts, but ban it in library code
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T201"]
"notebooks/**" = ["T201"]
"docs/**" = ["T201"]

[tool.ruff.format]
quote-style = "double"
